Modifying grid CSS to support Joomla menu lists

--- a/css/template.css
+++ b/css/template.css
@@ -37,12 +37,12 @@ ul {
 	width: 100%;
 }
 
-.wvm_grid_object {
+.wvm_grid_objects li {
 	width: 25%;
 	float: left;
 }
 
-.wvm_grid_object_content {
+.wvm_grid_objects li a {
 	text-align: center;
 	margin: 20px;
 	padding: 20px;
@@ -53,7 +53,7 @@ ul {
 	font-family: Arial, Helvetica;
 }
 
-.wvm_grid_object_content:hover {
+.wvm_grid_objects li a:hover {
 	-webkit-box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, .5);
 	box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, .5);
 	cursor: pointer;
