--- a/css/template.css
+++ b/css/template.css
@@ -40,9 +40,6 @@ ul {
 .wvm_grid_objects li {
 	width: 25%;
 	float: left;
-}
-
-.wvm_grid_objects li a {
 	text-align: center;
 	margin: 20px;
 	padding: 20px;
@@ -53,7 +50,7 @@ ul {
 	font-family: Arial, Helvetica;
 }
 
-.wvm_grid_objects li a:hover {
+.wvm_grid_objects li:hover {
 	-webkit-box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, .5);
 	box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, .5);
 	cursor: pointer;
