--- a/css/template.css
+++ b/css/template.css
@@ -60,6 +60,10 @@ ul {
 	cursor: pointer;
 }
 
+.wvm_grid_object_content a {
+	text-decoration: none;
+}
+
 .wvm_dash_content {
 	overflow: auto;
 	height: auto;
