--- a/css/template.css
+++ b/css/template.css
@@ -44,13 +44,13 @@ ul {
 }
 
 .wvm_grid_object_content {
+	color: #f4f4f4;
 	text-align: center;
 	margin: 20px;
 	padding: 20px;
 	border: solid 3px #f4f4f4;
 	-webkit-box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, .2);
 	box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, .2);
-	text-transform: uppercase;
 	font-family: Arial, Helvetica;
 }
 
