--- a/css/template.css
+++ b/css/template.css
@@ -49,6 +49,8 @@ ul {
 	padding: 20px;
 	border: solid 3px #f4f4f4;
 	-webkit-box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, .2);
+	-webkit-box-shadow: inset 0px 0px 40px 5px rgba(0, 0, 0, 0.2);
+	box-shadow: inset 0px 0px 40px 5px rgba(0, 0, 0, 0.2); 
 	box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, .2);
 	font-family: Arial, Helvetica;
 }
