--- a/css/template.css
+++ b/css/template.css
@@ -51,6 +51,7 @@ ul {
 	-webkit-box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, .2), inset 0px 0px 40px 5px rgba(0, 0, 0, 0.2);
 	box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, .2), inset 0px 0px 40px 5px rgba(0, 0, 0, 0.2); 
 	font-family: Arial, Helvetica;
+	background: #004764;
 }
 
 .wvm_grid_object_content:hover {
