--- a/css/template.css
+++ b/css/template.css
@@ -15,6 +15,18 @@ ul {
 .wvm_site {
 	width: 100%;
 	height: 100%;
+	background-image: linear-gradient(top, rgb(255,255,255) 0%, rgb(244,244,244) 100%);
+	background-image: -o-linear-gradient(top, rgb(255,255,255) 0%, rgb(244,244,244) 100%);
+	background-image: -moz-linear-gradient(top, rgb(255,255,255) 0%, rgb(244,244,244) 100%);
+	background-image: -webkit-linear-gradient(top, rgb(255,255,255) 0%, rgb(244,244,244) 100%);
+	background-image: -ms-linear-gradient(top, rgb(255,255,255) 0%, rgb(244,244,244) 100%);
+	background-image: -webkit-gradient(
+		linear,
+		left top,
+		left bottom,
+		color-stop(0, rgb(255,255,255)),
+		color-stop(1, rgb(244,244,244))
+	);
 }
 
 .wvm_site_grid {
