--- a/css/template.css
+++ b/css/template.css
@@ -5,6 +5,7 @@ html,body {
 	padding: 0;
 	width: 100%;
 	height: 100%;
+	font-size: 12px;
 }
 
 ul {
@@ -98,7 +99,11 @@ ul {
 
 .wvm_tagline {
 	font-family: Arial, Helvetica;
-	font-size: 20px;
+	font-size: 1.5em;
+}
+
+.wvm_tagline p {
+	margin: 0 0 10px 0;
 }
 
 .wvm_site_content {
