--- a/css/template.css
+++ b/css/template.css
@@ -103,14 +103,14 @@ ul {
 }
 
 .wvm_nav_object_content {
-	width: 56px;
-	height: 56px;
-	-webkit-border-radius: 28px;
-	border-radius: 28px;
+	width: 32px;
+	height: 32px;
+	-webkit-border-radius: 16px;
+	border-radius: 16px;
 	border: solid 3px #f4f4f4; 
 	-webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .2);
 	box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .2);
-	margin: 0 10px 0 0;
+	margin: 16px 20px 16px 0;
 }
 
 .wvm_tagline {
