--- a/css/template.css
+++ b/css/template.css
@@ -103,7 +103,7 @@ ul {
 }
 
 .wvm_nav_object_content {
-	width: 32px;
+	width: auto;
 	height: 32px;
 	-webkit-border-radius: 16px;
 	border-radius: 16px;
@@ -111,6 +111,7 @@ ul {
 	-webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .2);
 	box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .2);
 	margin: 16px 20px 16px 0;
+	padding: 5px;
 }
 
 .wvm_tagline {
