--- a/css/template.css
+++ b/css/template.css
@@ -110,8 +110,13 @@ ul {
 	border: solid 3px #f4f4f4; 
 	-webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .2);
 	box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .2);
-	margin: 16px 20px 16px 0;
+	margin: 8px 20px 8px 0;
 	padding: 5px;
+	line-height: 26px;
+}
+
+.wvm_nav_object_content a {
+	text-decoration: none;
 }
 
 .wvm_tagline {
