--- a/css/template.css
+++ b/css/template.css
@@ -6,6 +6,7 @@ html,body {
 	width: 100%;
 	height: 100%;
 	font-size: 12px;
+	font-family: Arial, Helvetica;
 }
 
 ul {
@@ -64,7 +65,6 @@ ul {
 	border: solid 3px #f4f4f4;
 	-webkit-box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, .2), inset 0px 0px 40px 5px rgba(0, 0, 0, 0.2);
 	box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, .2), inset 0px 0px 40px 5px rgba(0, 0, 0, 0.2); 
-	font-family: Arial, Helvetica;
 	background: #004764;
 }
 
@@ -117,6 +117,7 @@ ul {
 
 .wvm_nav_object_content a {
 	text-decoration: none;
+	color: #f4f4f4;
 }
 
 .wvm_tagline {
