--- a/css/template.css
+++ b/css/template.css
@@ -43,7 +43,7 @@ ul {
 	z-index: 100;
 	position: static;
 	float: left;
-	padding: 20px 0 0 20px;
+	padding: 20px 0 20px 20px;
 }
 
 .wvm_grid_objects {
@@ -128,7 +128,7 @@ ul {
 
 .wvm_site_content {
 	z-index: 99;
-	position: absolute;
+	position: static;
 	width: 100%;
 	height: 100%;
 }
