--- a/css/template.css
+++ b/css/template.css
@@ -133,10 +133,10 @@ ul {
 	height: 100%;
 }
 
-.wvm_site_content .item-page {
+.item-page {
 	margin: 0 20px 20px 20px;
 }
 
-.wvm_site_content .item-page .btn-group {
+.btn-group {
 	display: none;
 }
