--- a/css/template.css
+++ b/css/template.css
@@ -44,7 +44,8 @@ ul {
 	z-index: 100;
 	position: static;
 	float: left;
-	padding: 20px 0 20px 20px;
+	margin: 20px;
+	padding: 0 0 20px 0;
 }
 
 .wvm_grid_objects {
