--- a/css/template.css
+++ b/css/template.css
@@ -18,7 +18,7 @@ ul {
 .wvm_site {
 	width: 100%;
 	height: 100%;
-	position: absolute;
+	position: static;
 	background-image: linear-gradient(top, rgb(255,255,255) 0%, rgb(244,244,244) 100%);
 	background-image: -o-linear-gradient(top, rgb(255,255,255) 0%, rgb(244,244,244) 100%);
 	background-image: -moz-linear-gradient(top, rgb(255,255,255) 0%, rgb(244,244,244) 100%);
@@ -40,12 +40,14 @@ ul {
 	height: 100%;
 }
 
-.wvm_site_dash {
+.wvm_dash {
 	z-index: 100;
 	position: static;
 	float: left;
 	margin: 20px;
 	padding: 0 0 20px 0;
+	top: 0;
+	left: 0;
 }
 
 .wvm_grid_objects {
