--- a/css/template.css
+++ b/css/template.css
@@ -150,3 +150,13 @@ ul {
 .btn-group {
 	display: none;
 }
+
+.wvm_cli_example {
+	padding: 5px;
+	border: solid 3px #f4f4f4;
+	background: #000000;
+	color: #f4f4f4;
+	font-family: Courier, monospace;
+	-webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .2);
+	box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .2); 
+}
