--- a/css/template.css
+++ b/css/template.css
@@ -47,6 +47,8 @@ ul {
 	padding: 0 0 20px 0;
 	top: 0;
 	left: 0;
+	border-bottom: solid 1px #333333;
+	background: #f44f4f4;
 }
 
 .wvm_grid_objects {
@@ -159,4 +161,5 @@ ul {
 	font-family: Courier, monospace;
 	-webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .2);
 	box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .2); 
+	font-weight: bold;
 }
