--- a/css/template.css
+++ b/css/template.css
@@ -43,12 +43,10 @@ ul {
 	z-index: 100;
 	position: fixed;
 	float: left;
-	margin: 20px;
-	padding: 0 0 20px 0;
+	width: 100%;
 	top: 0;
 	left: 0;
 	border-bottom: solid 1px #333333;
-	background: #f44f4f4;
 }
 
 .wvm_grid_objects {
