--- a/css/template.css
+++ b/css/template.css
@@ -19,6 +19,7 @@ ul {
 	width: 100%;
 	position: static;
 	float: left;
+	overflow: auto;
 	background-image: linear-gradient(top, rgb(255,255,255) 0%, rgb(244,244,244) 100%);
 	background-image: -o-linear-gradient(top, rgb(255,255,255) 0%, rgb(244,244,244) 100%);
 	background-image: -moz-linear-gradient(top, rgb(255,255,255) 0%, rgb(244,244,244) 100%);
@@ -46,7 +47,8 @@ ul {
 	width: 100%;
 	top: 0;
 	left: 0;
-	border-bottom: solid 1px #333333;
+	border-bottom: solid 1px #999999;
+	background: #f4f4f4;
 	-webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .2);
 	box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .2);
 }
