--- a/css/template.css
+++ b/css/template.css
@@ -186,8 +186,16 @@ ul {
 .wvm_subnav {
 	position: static;
 	float: right;
+	padding: 20px 0 0 0;
+}
+
+.wvm_subnav a {
+	text-decoration: none;
+	color: #333333;
+	font-size: 1.5em;
 }
 
 .wvm_subnav ul {
 	list-style: disc;
+	padding: 0 0 0 20px;
 }
