--- a/css/template.css
+++ b/css/template.css
@@ -192,10 +192,10 @@ ul {
 .wvm_subnav a {
 	text-decoration: none;
 	color: #333333;
-	font-size: 1.5em;
+	font-size: 1.2em;
 }
 
 .wvm_subnav ul {
 	list-style: disc;
-	padding: 0 0 0 20px;
+	padding: 0 20px 0 20px;
 }
