--- a/css/template.css
+++ b/css/template.css
@@ -9,6 +9,16 @@ html,body {
 	font-family: Arial, Helvetica;
 }
 
+h1 {
+	font-size: 2em;
+}
+
+h2 {
+	font-size: 1.5em;
+	text-transform: uppercase;
+	color: #333333;
+}
+
 ul {
 	list-style: none;
 	padding: 0;
