--- a/css/template.css
+++ b/css/template.css
@@ -25,7 +25,15 @@ ul {
 	margin: 0;
 }
 
-.wvm_site {
+.wvm_site_home {
+	width: 100%;
+	height: 100%;
+	position: static;
+	top: 0;
+	left: 0;
+}
+
+.wvm_site_global {
 	width: 100%;
 	position: static;
 	float: left;
