--- a/css/template.css
+++ b/css/template.css
@@ -98,7 +98,7 @@ ul {
 
 .wvm_grid_object_content {
 	text-align: center;
-	padding: 20px;
+	padding: 20px 100px;
 }
 
 .wvm_grid_object_content:hover {
