--- a/css/template.css
+++ b/css/template.css
@@ -19,6 +19,12 @@ h2 {
 	color: #333333;
 }
 
+a, a:visited {
+	text-decoration: none;
+	color: #004B8C;
+	font-weight: bold;
+}
+
 ul {
 	list-style: none;
 	padding: 0;
@@ -38,18 +44,6 @@ ul {
 	position: static;
 	float: left;
 	overflow: auto;
-	background-image: linear-gradient(top, rgb(255,255,255) 0%, rgb(244,244,244) 100%);
-	background-image: -o-linear-gradient(top, rgb(255,255,255) 0%, rgb(244,244,244) 100%);
-	background-image: -moz-linear-gradient(top, rgb(255,255,255) 0%, rgb(244,244,244) 100%);
-	background-image: -webkit-linear-gradient(top, rgb(255,255,255) 0%, rgb(244,244,244) 100%);
-	background-image: -ms-linear-gradient(top, rgb(255,255,255) 0%, rgb(244,244,244) 100%);
-	background-image: -webkit-gradient(
-		linear,
-		left top,
-		left bottom,
-		color-stop(0, rgb(255,255,255)),
-		color-stop(1, rgb(244,244,244))
-	);
 }
 
 .wvm_site_grid {
