more breadcrumb styling

--- a/css/template.css
+++ b/css/template.css
@@ -163,6 +163,11 @@ ul {
 
 .wvm_breadcrumb li {
 	float: left;
+	padding: 0px 5px 0px 0px;
+}
+
+.wvm_breadcrumb.divider {
+	padding: 0px 0px 0px 5px;
 }
 
 .wvm_tagline {
