--- a/css/template.css
+++ b/css/template.css
@@ -157,11 +157,39 @@ ul {
 }
 
 .wvm_subnav {
+	position: fixed;
+	float: right;
+	right: 0;
+	padding: 10px 0 10px 0;
+	margin: 10px 0 10px 0;
 	list-style: none;
 }
 
-.wvm_subnav_object_content {
-	padding: 3px;
+.wvm_subnav a {
+	text-decoration: none;
+	color: #333333;
+}
+
+.wvm_subnav a:hover {
+	cursor: pointer;
+	text-decoration: underline;
+}
+
+.wvm_subnav ul {
+	padding: 0 0 0 20px;
+	margin: 0 20px 0 0;
+}
+
+.wvm_subnav ul .active.current {
+	font-weight: bold;
+}
+
+.wvm_subnav .nav-child {
+	font-weight: normal;
+}
+
+.wvm_subnav_object {
+	
 }
 
 .wvm_breadcrumb {
@@ -213,39 +241,4 @@ ul {
 	-webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .2);
 	box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .2); 
 	font-weight: bold;
-}
-
-.wvm_subnav {
-	position: fixed;
-	float: right;
-	right: 0;
-	padding: 10px 0 10px 0;
-	margin: 10px 0 10px 0;
-}
-
-.wvm_subnav a {
-	text-decoration: none;
-	color: #333333;
-}
-
-.wvm_subnav a:hover {
-	cursor: pointer;
-	text-decoration: underline;
-}
-
-.wvm_subnav ul {
-	padding: 0 0 0 20px;
-	margin: 0 20px 0 0;
-}
-
-.wvm_subnav ul .active.current {
-	font-weight: bold;
-}
-
-.wvm_subnav .nav-child {
-	font-weight: normal;
-}
-.wvm_subnav ul li {
-	list-style: decimal;
-	padding: 2px 0 2px 0;
 }
