--- a/css/template.css
+++ b/css/template.css
@@ -192,7 +192,7 @@ ul {
 
 .wvm_subnav_objects {
 	padding: 10px 10px 10px 0;
-	border-left: sold 3px #e0e0e0;
+	border-left: solid 3px #e0e0e0;
 }
 
 .wvm_subnav_object {
