Fixed a path typo

--- a/css/template.css
+++ b/css/template.css
@@ -120,7 +120,7 @@ ul {
 	background-color: #333333;
 	margin: 0 20px 0 0;
 	float: left;
-	background: url(../workvm-logo_unified.png)
+	background: url(../images/workvm-logo_unified.png)
 		repeat scroll 0 0
 		transparent;
 }
