--- a/css/template.css
+++ b/css/template.css
@@ -115,14 +115,11 @@ ul {
 }
 
 .wvm_logo {
-	width: 100%;
-	height: 100%;
+	width: 64px;
+	height: 64px;
 	background-color: #333333;
 	margin: 0 20px 0 0;
 	float: left;
-	background: url(../images/workvm-logo_unified.png)
-		repeat scroll 0 0
-		transparent;
 }
 
 .wvm_logo:hover {
