--- a/css/template.css
+++ b/css/template.css
@@ -120,12 +120,12 @@ ul {
 	height: 64px;
 	margin: 0 20px 0 0;
 	float: left;
+	opacity: 0.6;
 }
 
 .wvm_logo:hover {
 	cursor: pointer;
-	-webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.3);
-	box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.3);
+	opacity: 1.0;
 }
 
 .wvm_nav {
