--- a/css/template.css
+++ b/css/template.css
@@ -18,7 +18,11 @@ h2 {
 	color: #333333;
 	padding: 0 0 10px 0;
 	margin: 0 0 10px 0;
-	border-bottom: solid 3px #f4f4f4;
+	border-bottom: solid 1px #e0e0e0;
+}
+
+h2:hover {
+	border-bottom: solid 1px #333;
 }
 
 a, a:visited {
@@ -262,7 +266,7 @@ ul {
 }
 
 .item-page, .blog {
-	margin: 0 20px 20px 20px;
+	margin: 20px;
 }
 
 .btn-group {
