--- a/css/template.css
+++ b/css/template.css
@@ -76,6 +76,10 @@ ul {
 	padding: 20px;
 }
 
+.wvm_site_intro_content ul {
+	padding: 0 20px 0 0;
+}
+
 .wvm_dash {
 	z-index: 100;
 	position: fixed;
