--- a/css/template.css
+++ b/css/template.css
@@ -214,13 +214,17 @@ ul {
 	font-weight: bold;
 }
 
-.wvm_subnav_object_content.active {
+.current .wvm_subnav_object_content.active {
 	font-weight: bold;
 	background-color: #333;
 }
 
-.wvm_subnav_object_content.active a {
+.current .wvm_subnav_object_content.active a {
 	color: #f4f4f4;
+}
+
+.current .wvm_subnav_object_content.active a {
+	background-color: #333;
 }
 
 .wvm_subnav_object_content:hover {
