--- a/css/template.css
+++ b/css/template.css
@@ -212,6 +212,8 @@ ul {
 
 .wvm_subnav_object_content.parent.deeper {
 	font-weight: bold;
+	background-image: url(../images/arrow.png);
+	background-position: right center;
 }
 
 .current .wvm_subnav_object_content.active {
