--- a/css/template.css
+++ b/css/template.css
@@ -302,6 +302,9 @@ ul {
 	line-height: 32px;
 	text-align: center;
 	background-color: rgba(255, 255, 255, 0.5);
+	background: url(../images/pencil_32x32.png);
+	background-repeat: no-repeat;
+	background-position: 0% 50%;
 	-webkit-box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);
 	box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);	
 }
