--- a/css/template.css
+++ b/css/template.css
@@ -301,7 +301,7 @@ ul {
 	height: 32px;
 	width: 64px;
 	line-height: 32px;
-	text-align: center;
+	text-align: right;
 	background-color: rgba(255, 255, 255, 0.5);
 	background: url(../images/pencil_32x32.png);
 	background-repeat: no-repeat;
