--- a/css/template.css
+++ b/css/template.css
@@ -302,8 +302,8 @@ ul {
 	width: 64px;
 	line-height: 32px;
 	text-align: right;
-	background-color: rgba(255, 255, 255, 0.5);
-	background: url(../images/pencil_32x32.png);
+	background-color: rgba(255, 255, 255, 0.7);
+	background-image: url(../images/pencil_32x32.png);
 	background-repeat: no-repeat;
 	background-position: 0% 50%;
 	-webkit-box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);
