--- a/css/template.css
+++ b/css/template.css
@@ -430,8 +430,10 @@ ul {
 	text-align: center;
 	float: left;
 	font-size: 1.3em;
-	color: #333;
+	color: #f4f4f4;
+	background-color: #333;
 	border-bottom: solid 5px #e0e0e0;
+	padding: 0 0 5px 0;
 }
 
 .wvm_gitfw_files_nav_item:hover {
@@ -440,6 +442,7 @@ ul {
 }
 
 .wvm_gitfw_files_nav_item.wvm_active_nav {
+	color: #333;
 	border-bottom: none;
 	font-weight: bold;
 }
