--- a/css/template.css
+++ b/css/template.css
@@ -86,7 +86,7 @@ ul {
 	height: 16px;
 	line-height: 16px;
 	padding: 0 0 0 16px;
-	background-image: url(../images/grid_list.png);
+	background-image: url(../images/grid_list_16x16.png);
 	background-position: 0 50%;
 	background-repeat: no-repeat;
 }
