Styling for bio pics

--- a/css/template.css
+++ b/css/template.css
@@ -476,3 +476,16 @@ ul {
 	border-left: solid 1px #e0e0e0;
 	border-right: solid 1px #e0e0e0;
 }
+
+.wvm_bio_content {
+	overflow: auto;
+}
+
+.wvm_bio_pic, .wvm_bio_text {
+	float: left;
+}
+
+.wvm_bio_img {
+	-webkit-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);
+	box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);
+}
