--- a/css/template.css
+++ b/css/template.css
@@ -486,10 +486,13 @@ ul {
 }
 
 .wvm_bio_text {
-	float: right;
+	float: left;
+	padding: 0 0 0 20px;
+	font-size: 1.2em;
 }
 
 .wvm_bio_img {
-	-webkit-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);
-	box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
+	box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
+	margin: 10px;
 }
