Changed CLI examples margin

--- a/css/template.css
+++ b/css/template.css
@@ -335,6 +335,7 @@ ul {
 
 .wvm_cli_example {
 	padding: 5px;
+	margin: 10px 0 10px 0;
 	border: solid 3px #f4f4f4;
 	background: #000000;
 	color: #f4f4f4;
