--- a/css/template.css
+++ b/css/template.css
@@ -101,6 +101,22 @@ ul {
 	box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .2);
 }
 
+.wvm_list_content ul {
+	list-style: none;
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+}
+
+.wvm_list_content li {
+	height: 20px;
+	line-height: 20px;
+	padding: 0 0 0 20px;
+	background-image: url(../images/grid_list_16x16.png);
+	background-position: 0 50%;
+	background-repeat: no-repeat;
+}
+
 .wvm_grid_objects {
 	overflow: auto;
 	float: left;
@@ -297,22 +313,6 @@ ul {
 
 .item-page, .blog {
 	margin: 20px;
-}
-
-.item-page ul {
-	list-style: none;
-	list-style-type: none;
-	padding: 0;
-	margin: 0;
-}
-
-.item-page li {
-	height: 20px;
-	line-height: 20px;
-	padding: 0 0 0 20px;
-	background-image: url(../images/grid_list_16x16.png);
-	background-position: 0 50%;
-	background-repeat: no-repeat;
 }
 
 .edit-icon {
